Commit al master del HTML y CSS

--- a/Articulo.html
+++ b/Articulo.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="CSS/Styles.css">
     </head>
     <body>
-        <h1>Post:</h1>
-        <p>First Paragraph</p>
+        <div id="container">
+            <div id="post">
+                <h1>Titulo de Referencia</h1>
+                <p>Parrafo donde se dara inicio a la explicacion de Branches o Ramas en GIT</p>
+            </div>
+        </div>
     </body>
 </html>
