--- a/Articulo.html
+++ b/Articulo.html
@@ -5,7 +5,9 @@
     </head>
     <body>
         <div id="container">
-            <div id="header">Cabecera</div>
+            <div id="header">Header
+                <span id="tagline">Baby header</span>
+            </div>
             <div id="post">
                 <h1>Titulo de Referencia</h1>
                 <p>Parrafo donde se dara inicio a la explicacion de Branches o Ramas en GIT</p>
