Contenido Adicional y Tipografia Distinta

--- a/Articulo.html
+++ b/Articulo.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Titulo de Referencia</h1>
                 <p>Parrafo donde se dara inicio a la explicacion de Branches o Ramas en GIT</p>
+                <p>Este parrafo es agregado despues de hacer el commit en "header"</p>
             </div>
         </div>
     </body>
