--- a/Articulo.html
+++ b/Articulo.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="header">Header
-                <span id="tagline">Baby header</span>
+                <span id="tagline">Small header</span>
             </div>
             <div id="post">
                 <h1>Titulo de Referencia</h1>
