Cambio color, header texto, y like and share anadido

--- a/Articulo.html
+++ b/Articulo.html
@@ -6,12 +6,13 @@
     <body>
         <div id="container">
             <div id="header">Header
-                <span id="tagline">Baby header</span>
+                <span id="tagline">Master header</span>
             </div>
             <div id="post">
                 <h1>Titulo de Referencia</h1>
                 <p>Parrafo donde se dara inicio a la explicacion de Branches o Ramas en GIT</p>
                 <p>Este parrafo es agregado despues de hacer el commit en "header"</p>
+                <p>Like & Share</p>
             </div>
         </div>
     </body>
