--- a/Articulo.html
+++ b/Articulo.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>NUEVO TITULO</title>
+        <title>NUEVO TITULO v2</title>
         <link rel="stylesheet" href="CSS/Styles.css">
     </head>
     <body>
