Mejora color header y body, anadir un parrafo lorem ipsum

--- a/Articulo.html
+++ b/Articulo.html
@@ -6,12 +6,13 @@
     <body>
         <div id="container">
             <div id="header">Header
-                <span id="tagline">Small header</span>
+                <span id="tagline">Branch Header</span>
             </div>
             <div id="post">
                 <h1>Titulo de Referencia</h1>
                 <p>Parrafo donde se dara inicio a la explicacion de Branches o Ramas en GIT</p>
                 <p>Este parrafo es agregado despues de hacer el commit en "header"</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias pariatur perspiciatis recusandae iure quos perferendis ad ex, nisi eum aperiam animi. Esse tempore nobis quidem aut soluta voluptas cumque inventore.</p>
             </div>
         </div>
     </body>
