--- a/Articulo.html
+++ b/Articulo.html
@@ -14,6 +14,8 @@
                 <p>Este parrafo es agregado despues de hacer el commit en "header"</p>
                 <p>Like & Share</p>
             </div>
+            <div id="footer"> Footer hecho: Nicolas Imbachi 
+            </div>
         </div>
     </body>
 </html>
