--- a/Articulo.html
+++ b/Articulo.html
@@ -10,8 +10,8 @@
             </div>
             <div id="post">
                 <h1>Titulo de Referencia</h1>
-                <p>Parrafo donde se dara inicio a la explicacion de Branches o Ramas en GIT</p>
-                <p>Este parrafo es agregado despues de hacer el commit en "header"</p>
+                <p>Párrafo donde se dara inicio a la explicacion de Branches o Ramas en GIT</p>
+                <p>Este párrafo es agregado despues de hacer el commit en "header"</p>
                 <p>Like & Share</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias pariatur perspiciatis recusandae iure quos perferendis ad ex, nisi eum aperiam animi. Esse tempore nobis quidem aut soluta voluptas cumque inventore.</p>
             </div>
